--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,14 +13,15 @@
         android:layout_height="match_parent" />
 
     <include
+        android:id="@+id/include2"
         layout="@layout/main_weather_widget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:elevation="12dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/new_trip_button"
@@ -36,7 +37,7 @@
         android:paddingTop="10dp"
         android:paddingRight="15dp"
         android:paddingBottom="10dp"
-        android:text="NEW TRIP"
+        android:text="@string/trip_name_new_trip"
         android:textSize="25sp"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +57,7 @@
         android:elevation="30dp"
         android:backgroundTint="#545454"
         android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
-        android:text="Go"
+        android:text="@string/trip_name_go"
         android:textSize="25sp"
         android:fontFamily="@font/nunito_extrabold"
         android:visibility="gone"
@@ -76,7 +77,7 @@
         android:paddingLeft="15dp"
         app:cornerRadius="15dp"
         android:elevation="30dp"
-        android:text="Cancel"
+        android:text="@string/trip_name_cancel"
         android:textSize="25sp"
         android:fontFamily="@font/nunito_extrabold"
         android:visibility="gone"
@@ -105,7 +106,7 @@
         android:paddingLeft="30dp"
         app:cornerRadius="15dp"
         android:elevation="10dp"
-        android:hint="TRIP NAME"
+        android:hint="@string/trip_name_hint"
         android:textSize="25sp"
         android:fontFamily="@font/nunito_medium"
         android:background="@drawable/edit_text_border"
@@ -116,4 +117,35 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0pt"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_start"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:gravity="center"
+            android:scaleType="fitCenter"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/button_end"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:gravity="center"
+            android:scaleType="fitCenter"
+            android:text="Stop" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
