--- a/app/src/main/res/layout/location_show_activity.xml
+++ b/app/src/main/res/layout/location_show_activity.xml
@@ -43,9 +43,9 @@
         android:layout_marginLeft="15dp"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="140dp"
         android:layout_marginLeft="15dp"
         android:gravity="start"
         android:orientation="horizontal"
@@ -61,7 +61,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="15dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -109,7 +109,7 @@
 
                 <TextView
                     android:id="@+id/name_title_info"
-                    android:layout_width="70dp"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:gravity="center|start"
                     android:fontFamily="@font/raleway_medium"
@@ -145,9 +145,10 @@
 
                 <TextView
                     android:id="@+id/date_info"
-                    android:layout_width="70dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_medium"
+                    android:text="12 Oct 2021"
                     android:textColor="@color/darkgrey" />
             </LinearLayout>
 
@@ -189,7 +190,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/longitude"
+                    android:id="@+id/longitude_info"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -201,7 +202,6 @@
                     android:id="@+id/name_latitude"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
                     android:fontFamily="@font/raleway_bold"
                     android:gravity="center|start"
                     android:text="@string/latitude"
@@ -209,7 +209,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/latitude"
+                    android:id="@+id/latitude_info"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -220,20 +220,114 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.2"
+                android:gravity="start"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:fontFamily="@font/raleway_bold"
+                    android:gravity="center|start"
+                    android:text="@string/description"
+                    android:textColor="@color/darkgreen"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/description_info"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:gravity="center|start"
+                    android:fontFamily="@font/raleway_medium"
+                    android:text="@string/description_detail"
+                    android:textSize="12sp"
+                    android:textColor="@color/darkgrey" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="330dp"
+        android:layout_marginLeft="15dp"
+        android:gravity="start"
+        android:orientation="horizontal"
+        android:textAlignment="textStart">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="15dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/asd"
+                android:id="@+id/photos"
                 android:layout_width="match_parent"
                 android:layout_height="26dp"
                 android:gravity="start"
                 android:paddingBottom="0dp"
-                android:text="Description"
+                android:text="@string/photos"
+                android:textColor="@color/darkgrey"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/nunito_bold" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="480dp"
+        android:layout_marginLeft="15dp"
+        android:gravity="start"
+        android:orientation="horizontal"
+        android:textAlignment="textStart">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/reviews"
+                android:layout_width="match_parent"
+                android:layout_height="26dp"
+                android:gravity="start"
+                android:paddingBottom="0dp"
+                android:text="@string/reviews"
                 android:textColor="@color/darkgrey"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -243,13 +337,53 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/edit_options_button"
+        android:id="@+id/options_open_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_baseline_add_24"
+        app:tint="@color/white"
+        app:rippleColor="@color/white"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/options_close_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/icon_multiply_48"
+        android:visibility="gone"
+        app:backgroundTint="@color/white"
+        app:rippleColor="@color/white"
+        app:tint="@color/darkgreen" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_photo_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="85dp"
+        android:src="@drawable/icon_camera_96"
+        android:visibility="gone"
+        app:backgroundTint="@color/lightgreen"
+        app:tint="@color/white"
+        app:rippleColor="@color/white"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/edit_review_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="155dp"
+        android:src="@drawable/icon_pencil_96"
+        android:visibility="gone"
+        app:backgroundTint="@color/lightgreen"
         app:tint="@color/white"
         app:rippleColor="@color/white"/>
 
